--- a/plot_PreVsPostAnalysis_DayNight.Rmd
+++ b/plot_PreVsPostAnalysis_DayNight.Rmd
@@ -91,14 +91,14 @@ p.KDE.pre.combined <- ggplot() +
                    group = group),
                color = "black",
                fill = "lightgoldenrod1",
-               alpha = 1.0) +
+               alpha = 0.4) +
 
   geom_polygon(data = KD.eachID.pre.combined$vert.50.df,
                aes(x = long, y = lat,
                    group = group),
                color = "black",
                fill = "gold",
-               alpha = 1.0) +
+               alpha = 0.6) +
   coord_map(xlim = c(-117.145, -117.09),
             ylim = c(32.595, 32.665)) + 
   facet_grid(. ~ ID) +
@@ -110,9 +110,8 @@ p.KDE.pre.combined <- ggplot() +
                                         colour = "black"),
         axis.text.x = element_text(angle = 90, vjust = 0.5),
         panel.border = element_rect(color = "black",
-                                    fill = NA)) 
-  # scale_x_continuous(breaks = c(-117.14, -117.12, -117.10),
-  #                    limits = c(-117.145, -117.09)) +
+                                    fill = NA)) +
+  scale_x_continuous(breaks = c(-117.14, -117.12, -117.10))
   # scale_y_continuous(breaks = c(32.60, 32.62, 32.64),
   #                    limits = c(32.595, 32.665))
 plot(p.KDE.pre.combined)
@@ -138,14 +137,14 @@ p.KDE.post.combined <- ggplot() +
                    group = group),
                color = "black",
                fill = "lightgreen",
-               alpha = 1.0) +
+               alpha = 0.4) +
 
   geom_polygon(data = KD.eachID.post.combined$vert.50.df,
                aes(x = long, y = lat,
                    group = group),
                color = "black",
                fill = "green1",
-               alpha = 1.0) +
+               alpha = 0.4) +
   coord_map(xlim = c(-117.145, -117.09),
             ylim = c(32.595, 32.665)) + 
   facet_grid(. ~ ID) +
@@ -182,14 +181,14 @@ p.KDE.pre.day <- ggplot() +
                    group = group),
                color = "black",
                fill = "lightcyan",
-               alpha = 0.8) +
+               alpha = 0.6) +
 
   geom_polygon(data = KD.eachID.pre.day$vert.50.df,
                aes(x = long, y = lat,
                    group = group),
                color = "black",
                fill = "blue4",
-               alpha = 0.8) +
+               alpha = 0.6) +
   coord_map(xlim = c(-117.145, -117.09),
             ylim = c(32.595, 32.665)) + 
   facet_grid(. ~ ID) +
@@ -231,14 +230,14 @@ p.KDE.pre.day.night <- ggplot() +
                    group = group),
                color = "black",
                fill = "lightcyan",
-               alpha = 1.0) +
+               alpha = 0.6) +
   
   geom_polygon(data = KD.eachID.pre.day$vert.50.df,
                aes(x = long, y = lat,
                    group = group),
                color = "black",
                fill = "blue4",
-               alpha = 1.0) +
+               alpha = 0.6) +
 
   geom_polygon(data = KD.eachID.pre.night$vert.95.df,
                aes(x = long, y = lat,
@@ -280,8 +279,6 @@ if (save.fig)
 Post period and daytime. 
 
 ```{r}
-
-
 p.KDE.post.day <- ggplot() + 
   geom_polygon(data = SDBay.df,
                aes(x = long, y = lat, group = group),
@@ -292,14 +289,14 @@ p.KDE.post.day <- ggplot() +
                    group = group),
                color = "black",
                fill = "lightcyan",
-               alpha = 0.5) +
+               alpha = 0.6) +
 
   geom_polygon(data = KD.eachID.post.day$vert.50.df,
                aes(x = long, y = lat,
                    group = group),
                color = "black",
                fill = "blue4",
-               alpha = 0.5) +
+               alpha = 0.6) +
   coord_map(xlim = c(-117.145, -117.09),
             ylim = c(32.595, 32.665)) + 
   facet_grid(. ~ ID) +
@@ -338,7 +335,7 @@ p.KDE.post.day.night <- ggplot() +
                    group = group),
                color = "black",
                fill = "lightcyan",
-               alpha = 1.0) +
+               alpha = 0.6) +
   # geom_polygon(data = KD.eachID.post.day$vert.75.df,
   #              aes(x = long, y = lat,
   #                  group = group),
@@ -351,7 +348,7 @@ p.KDE.post.day.night <- ggplot() +
                    group = group),
                color = "black",
                fill = "blue4",
-               alpha = 1.0) +
+               alpha = 0.6) +
   geom_polygon(data = KD.eachID.post.night$vert.95.df,
                aes(x = long, y = lat,
                    group = group),
@@ -424,7 +421,7 @@ p.KDE.pre.post.day.night <- ggplot() +
                    group = group),
                color = "black",
                fill = "lightcyan",
-               alpha = 0.5) +
+               alpha = 0.6) +
   # geom_polygon(data = KD.eachID.post.day$vert.75.df,
   #              aes(x = long, y = lat,
   #                  group = group),
@@ -437,13 +434,13 @@ p.KDE.pre.post.day.night <- ggplot() +
                    group = group),
                color = "black",
                fill = "blue4",
-               alpha = 0.5) +
+               alpha = 0.6) +
   geom_polygon(data = night.vert.95,
                aes(x = long, y = lat,
                    group = group),
                color = "black",
                fill = "lightpink",
-               alpha = 0.3) +
+               alpha = 0.5) +
   # geom_polygon(data = KD.eachID.post.night$vert.75.df,
   #              aes(x = long, y = lat,
   #                  group = group),
@@ -456,7 +453,7 @@ p.KDE.pre.post.day.night <- ggplot() +
                    group = group),
                color = "black",
                fill = "red4",
-               alpha = 0.3) +
+               alpha = 0.5) +
   coord_map(xlim = c(-117.145, -117.09),
             ylim = c(32.595, 32.665)) + 
   facet_grid(. ~ ID) +
@@ -502,13 +499,13 @@ p.KDE.pre.all <- ggplot() +
                    group = group),
                color = "black",
                fill = "lightgoldenrod1",
-               alpha = 0.5) +
+               alpha = 0.6) +
   geom_polygon(data = UD.pre.50.latlon,
                aes(x = long, y = lat,
                    group = group),
                color = "black",
                fill = "gold",
-               alpha = 0.5) +
+               alpha = 0.6) +
   
   coord_map(xlim = c(-117.145, -117.09),
             ylim = c(32.595, 32.665)) + 
@@ -526,7 +523,7 @@ theme(panel.border = element_rect(color = "black", fill = NA),
   #                    limits = c(32.595, 32.665))
 
 if (save.fig)
-  ggsave(plot = p.KDE.post.day.night,
+  ggsave(plot = p.KDE.pre.all,
          filename = "figures/KDE_pre_all.png",
          device = "png",
          dpi = 600)
@@ -547,25 +544,25 @@ p.KDE.pre.post.all <- ggplot() +
                    group = group),
                color = "black",
                fill = "lightgoldenrod1",
-               alpha = 1.0) +
+               alpha = 0.6) +
   geom_polygon(data = UD.pre.50.latlon,
                aes(x = long, y = lat,
                    group = group),
                color = "black",
                fill = "gold",
-               alpha = 1.0) +
+               alpha = 0.6) +
      geom_polygon(data = UD.post.95.latlon,
                aes(x = long, y = lat,
                    group = group),
                color = "black",
                fill = "lightgreen",
-               alpha = 0.6) +
+               alpha = 0.5) +
   geom_polygon(data = UD.post.50.latlon,
                aes(x = long, y = lat,
                    group = group),
                color = "black",
                fill = "green1",
-               alpha = 0.6) +
+               alpha = 0.5) +
   
   coord_map(xlim = c(-117.145, -117.09),
             ylim = c(32.595, 32.665)) + 
@@ -583,7 +580,7 @@ theme(panel.border = element_rect(color = "black", fill = NA),
   #                    limits = c(32.595, 32.665))
 
 if (save.fig)
-  ggsave(plot = p.KDE.post.day.night,
+  ggsave(plot = p.KDE.pre.post.all,
          filename = "figures/KDE_pre_post_all.png",
          device = "png",
          dpi = 600)
@@ -607,13 +604,13 @@ p.KDE.pre.DayVsNight <- ggplot() +
                    group = group),
                color = "black",
                fill = "lightgoldenrod1",
-               alpha = 0.5) +
+               alpha = 0.6) +
   geom_polygon(data = UD.pre.day.night.50.latlon,
                aes(x = long, y = lat,
                    group = group),
                color = "black",
                fill = "gold",
-               alpha = 0.5) +
+               alpha = 0.6) +
   coord_map(xlim = c(-117.145, -117.09),
             ylim = c(32.595, 32.665)) + 
   facet_grid(. ~ daynight) +
@@ -631,7 +628,7 @@ theme(panel.border = element_rect(color = "black", fill = NA),
 
 if (save.fig)
   ggsave(plot = p.KDE.pre.DayVsNight,
-         filename = "figures/KDE_pre_all_DayVsNight.png",
+         filename = "figures/KDE_pre_DayVsNight.png",
          device = "png",
          dpi = 600)
 
@@ -643,8 +640,6 @@ plot(p.KDE.pre.DayVsNight)
 
 Plot post night vs day
 ```{r}
-
-
 p.KDE.post.DayVsNight <- ggplot() + 
   geom_polygon(data = SDBay.df,
                aes(x = long, y = lat, group = group),
@@ -655,13 +650,13 @@ p.KDE.post.DayVsNight <- ggplot() +
                    group = group),
                color = "black",
                fill = "lightgreen",
-               alpha = 0.5) +
+               alpha = 0.6) +
   geom_polygon(data = UD.post.day.night.50.latlon,
                aes(x = long, y = lat,
                    group = group),
                color = "black",
                fill = "green1",
-               alpha = 0.5) +
+               alpha = 0.6) +
   coord_map(xlim = c(-117.145, -117.09),
             ylim = c(32.595, 32.665)) + 
   facet_grid(. ~ daynight) +
@@ -679,7 +674,7 @@ theme(panel.border = element_rect(color = "black", fill = NA),
 
 if (save.fig)
   ggsave(plot = p.KDE.post.DayVsNight,
-         filename = "figures/KDE_post_all_DayVsNight.png",
+         filename = "figures/KDE_post_DayVsNight.png",
          device = "png",
          dpi = 600)
 
@@ -739,13 +734,13 @@ p.KDE.pre.post.DayVsNight <- ggplot() +
                    group = group),
                color = "black",
                fill = "lightgreen",
-               alpha = 0.5) +
+               alpha = 0.6) +
   geom_polygon(data = UD.pre.post.day.night.50,
                aes(x = long, y = lat,
                    group = group),
                color = "black",
                fill = "green1",
-               alpha = 0.5) +
+               alpha = 0.6) +
   
   coord_map(xlim = c(-117.145, -117.09),
             ylim = c(32.595, 32.665)) + 
@@ -764,7 +759,7 @@ theme(panel.border = element_rect(color = "black", fill = NA),
 
 if (save.fig)
   ggsave(plot = p.KDE.pre.post.DayVsNight,
-         filename = "figures/KDE_all_preVspost_DayVsNight.png",
+         filename = "figures/KDE_preVspost_DayVsNight.png",
          device = "png",
          dpi = 600)
 
